// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> component its snapshot matches story Default 1`] = `
<div>
  <div
    class="cds--tabs"
  >
    <button
      aria-hidden="true"
      aria-label="Scroll left"
      class="cds--tab--overflow-nav-button cds--tab--overflow-nav-button--previous cds--tab--overflow-nav-button--hidden"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 8L10 3 10.7 3.7 6.4 8 10.7 12.3 10 13z"
        />
      </svg>
    </button>
    <div
      aria-label="Tabs"
      class="cds--tab--list"
      role="tablist"
    >
      <button
        aria-controls="ccs-1-tabpanel-0"
        aria-selected="true"
        class="cds--tabs__nav-item cds--tabs__nav-link cds--tabs__nav-item--selected"
        id="ccs-1-tab-0"
        role="tab"
        tabindex="0"
        type="button"
      >
        Tab One
      </button>
      <button
        aria-controls="ccs-1-tabpanel-1"
        aria-selected="false"
        class="cds--tabs__nav-item cds--tabs__nav-link"
        id="ccs-1-tab-1"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab Two
      </button>
    </div>
    <button
      aria-hidden="true"
      aria-label="Scroll right"
      class="cds--tab--overflow-nav-button cds--tab--overflow-nav-button--next cds--tab--overflow-nav-button--hidden"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
        />
      </svg>
    </button>
  </div>
  <div
    aria-labelledby="ccs-1-tab-0"
    class="cds--tab-content"
    id="ccs-1-tabpanel-0"
    role="tabpanel"
    tabindex="0"
  >
    <p>
       Lorem ipsum 
    </p>
    <p>
       Dolor sit amet 
    </p>
  </div>
  <div
    aria-labelledby="ccs-1-tab-1"
    class="cds--tab-content"
    hidden=""
    id="ccs-1-tabpanel-1"
    role="tabpanel"
    tabindex="0"
  >
    <p>
       Consectetuer 
    </p>
  </div>
</div>
`;

exports[`<Tabs /> component its snapshot matches story Skeleton 1`] = `
.c0 {
  width: 5.5em;
  border-radius: 5px;
  -webkit-animation: pulse 1.2s ease-in-out infinite;
  animation: pulse 1.2s ease-in-out infinite;
  background: linear-gradient(-90deg,#f0f0f0 0%,#f8f8f8 50%,#f0f0f0 100%);
  background-size: 400% 400%;
  display: inline-block;
  height: 100%;
}

.c0::before {
  content: '\\00a0';
}

<div>
  <div
    class="cds--tabs"
  >
    <button
      aria-hidden="true"
      aria-label="Scroll left"
      class="cds--tab--overflow-nav-button cds--tab--overflow-nav-button--previous cds--tab--overflow-nav-button--hidden"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 8L10 3 10.7 3.7 6.4 8 10.7 12.3 10 13z"
        />
      </svg>
    </button>
    <div
      aria-label="Tabs"
      class="cds--tab--list"
      role="tablist"
    >
      <button
        aria-controls="ccs-2-tabpanel-0"
        aria-selected="true"
        class="cds--tabs__nav-item cds--tabs__nav-link cds--tabs__nav-item--selected"
        id="ccs-2-tab-0"
        role="tab"
        tabindex="0"
        type="button"
      >
        <div
          class="c0"
        />
      </button>
      <button
        aria-controls="ccs-2-tabpanel-1"
        aria-selected="false"
        class="cds--tabs__nav-item cds--tabs__nav-link"
        id="ccs-2-tab-1"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <div
          class="c0"
        />
      </button>
      <button
        aria-controls="ccs-2-tabpanel-2"
        aria-selected="false"
        class="cds--tabs__nav-item cds--tabs__nav-link"
        id="ccs-2-tab-2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <div
          class="c0"
        />
      </button>
    </div>
    <button
      aria-hidden="true"
      aria-label="Scroll right"
      class="cds--tab--overflow-nav-button cds--tab--overflow-nav-button--next cds--tab--overflow-nav-button--hidden"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
        />
      </svg>
    </button>
  </div>
</div>
`;
